--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -69,21 +69,28 @@
                 <form method="post" onsubmit="myButton.disabled=true; return true;">
                     {% csrf_token %}
                     {% for field in game_form %}
-                    <p>
-                        {{ field.label_tag }}
-                        {{ field }}
-                        {% if field == game_form.max_players %}
-                            <span class="highlight"></span><output id="rangevalue">3</output>
-                        {% endif %}
-                        {% if field.help_text %}
-                            <div>
-                                <small style="color: white">{{ field.help_text }}</small>
+                        <div class="row top30">
+                            <div class="col">
+                            {{ field.label_tag }}
+                            {% if field == game_form.max_players %}
+                            <div id="slider">
+                                <span class="highlight"></span>
+                                <output id="rangevalue">3</output>
                             </div>
-                        {% endif %}
-                        {% for error in field.errors %}
-                            <p style="color: red">{{ error }}</p>
-                        {% endfor %}
-                    </p>
+                            {{ field }}
+                            {% else %}
+                                {{ field }}
+                            {% endif %}
+                            {% if field.help_text %}
+                                <div>
+                                    <small style="color: white">{{ field.help_text }}</small>
+                                </div>
+                            {% endif %}
+                            {% for error in field.errors %}
+                                <p style="color: red">{{ error }}</p>
+                            {% endfor %}
+                            </div>
+                        </div>
                     {% endfor %}
                     <input class="button-primary btn btn-space" type="submit" class="metal" value="create game" id="create">
                 </form>
