--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12 col-md-12 text-center">
-            <h4 class="bigcenter">List of Open Game Rooms</h4>
+            <h2 class="custom-h2">List of Open Game Rooms</h2>
         </div>
     </div>
 </div>
@@ -15,7 +15,7 @@
 <div class="container">
     <div class="row" id="games">
         <div class="col table-responsive text-center">
-            <table class="table table-hover">
+            <table class="table metal-effect2">
                 <thead>
                     <tr>
                         <th class="text-center">Game ID</th>
@@ -39,7 +39,7 @@
     <div class="row">
         <div class="col-md-6 text-center">
             <div class="cardb">
-                <h2>Join Game</h2>
+                <h2 class="custom-h2">Join Game</h2>
                 <hr class="style1">
                 <form method="post" onsubmit="myButton.disabled=true; return true;">
                     {% csrf_token %}
@@ -59,14 +59,15 @@
                         </div>
                     </div>
                     {% endfor %}
-                    <input class="button-primary btn btn-space" type="submit" value="join game" id="join">
+                    <hr class="style1">
+                    <input type="submit" value="join game" id="join">
                 </form>
                 <p id="JoinError" style="color: #ef3245"></p>
             </div>
         </div>
         <div class="col-md-6 text-center">
             <div class="cardr">
-                <h2>Create Game</h2>
+                <h2 class="custom-h2">Create Game</h2>
                 <hr class="style1">
                 <form method="post" onsubmit="myButton.disabled=true; return true;">
                     {% csrf_token %}
@@ -94,7 +95,8 @@
                             </div>
                         </div>
                     {% endfor %}
-                    <input class="button-primary btn btn-space" type="submit" class="metal" value="create game" id="create">
+                    <hr class="style1">
+                    <input type="submit" class="metal" value="create game" id="create">
                 </form>
             </div>
         </div>
