--- a/clashofplanets/game/templates/gameroom.html
+++ b/clashofplanets/game/templates/gameroom.html
@@ -18,7 +18,7 @@
     </div>
     <div class="container">
         <div class="row text-center">
-                <table class="table table-hover">
+                <table class="table metal-effect2">
                     <thead>
                         <tr>
                             <th class="text-center">Planet ID</th>
