--- a/clashofplanets/game/templates/ingame.html
+++ b/clashofplanets/game/templates/ingame.html
@@ -19,7 +19,7 @@
     </div>
     <div class="row text-center">
         <div class="col">
-            <table class="table table-hover">
+            <table class="table metal-effect2">
                 <thead>
                     <tr>
                         <th class="text-center">Planet ID</th>
