--- a/clashofplanets/game/static/css/game.css
+++ b/clashofplanets/game/static/css/game.css
@@ -318,8 +318,8 @@ input[type=range]::-moz-range-thumb {
     box-shadow: 0px 0px 0px #000000;
     border: 0px solid #000000;
     height: 20px;
-    width: 40px;
-    border-radius: 12px;
+    width: 20px;
+    border-radius: 10px;
     background: #529DE1;
     cursor: pointer;
 }
@@ -333,10 +333,10 @@ input[type=range]::-ms-track {
     color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-    background: #50555C;
+    background: red;
     border: 0px solid #000000;
     border-radius: 28px;
-    box-shadow: 1px 1px 1px #50555C;
+    box-shadow: 1px 1px 1px #42ebf4;
 }
 input[type=range]::-ms-fill-upper {
     background: #50555C;
@@ -355,10 +355,21 @@ input[type=range]::-ms-thumb {
     cursor: pointer;
 }
 input[type=range]:focus::-ms-fill-lower {
-    background: #50555C;
+    background: #42ebf4;
 }
 input[type=range]:focus::-ms-fill-upper {
     background: #50555C;
+}
+
+input[type=range]::-moz-range-progress {
+    width: 100%;
+    height: 14px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 1px 1px 1px rgba(66, 232, 244, 0.5);
+    background: rgba(66, 232, 244, 0.5);
+    border-radius: 14px;
+    border: 0px solid rgba(66, 232, 244, 0.5);
 }
 
 .top5 { margin-top:5px; }
