--- a/clashofplanets/game/templates/home.html
+++ b/clashofplanets/game/templates/home.html
@@ -3,14 +3,20 @@
 {% load static %}
 
 {% block main_content %}
-<div class="row text-center">
-    <div class="col-md-12">
-        <h1>Welcome to Clash Of The Planets
-            {% if request.user.is_authenticated %}
-            <span class="text-primary" > {{request.user.username}}</span>!
-            {% endif %}
-        </h1>
-        <img src="{% static "img/home_image.gif" %}" class="img-fluid center-block" />
+<div ="container">
+    <div class="row text-center">
+        <div class="col-md-12">
+            <h1>Welcome to Clash Of The Planets
+                {% if request.user.is_authenticated %}
+                <span class="text-primary" > {{request.user.username}}</span>!
+                {% endif %}
+            </h1>
+        </div>
+    </div>
+    <div class="row justify-content-center top30">
+        <div class="col-xs-6 metal-effect2">
+            <img src="{% static "img/home_image.gif" %}" class="img-fluid center-block" />
+        </div>
     </div>
 </div>
 {% endblock %}
