--- a/clashofplanets/game/static/css/game.css
+++ b/clashofplanets/game/static/css/game.css
@@ -318,7 +318,7 @@ input[type=range]::-moz-range-thumb {
     box-shadow: 0px 0px 0px #000000;
     border: 0px solid #000000;
     height: 20px;
-    width: 40px;
+    width: 20px;
     border-radius: 12px;
     background: #529DE1;
     cursor: pointer;
@@ -360,6 +360,19 @@ input[type=range]:focus::-ms-fill-lower {
 input[type=range]:focus::-ms-fill-upper {
     background: #50555C;
 }
+
+input[type=range]::-moz-range-progress {
+    width: 100%;
+    height: 12px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 1px 1px 1px rgb(53, 244, 232);
+    background: rgb(53, 244, 232);
+    border-radius: 14px;
+    border: 0px solid rgb(53, 244, 232);
+ }
+
+
 
 .top5 { margin-top:5px; }
 .top7 { margin-top:7px; }
