--- a/clashofplanets/game/static/css/game.css
+++ b/clashofplanets/game/static/css/game.css
@@ -210,11 +210,13 @@ input[type="password"],
 textarea,
 select {
     height: 30px;
-    background-color: #fff;
-    border: 1px solid #D1D1D1;
+    color: rgb(53, 244, 232);
+    background-color: #000;
+    border: 0px solid #D1D1D1;
     border-radius: 1px;
     box-shadow: none;
     box-sizing: border-box; }
+
 /* Removes awkward default styles on some inputs for iOS */
 input[type="email"],
 input[type="number"],
@@ -224,13 +226,17 @@ input[type="tel"],
 input[type="url"],
 input[type="password"],
 textarea {
-  -webkit-appearance: none;
+    -webkit-appearance: none;
      -moz-appearance: none;
-          appearance: none; }
+          appearance: none;
+}
+
 textarea {
     min-height: 65px;
     padding-top: 2px;
-    padding-bottom: 4px; }
+    padding-bottom: 4px;
+}
+
 input[type="email"]:focus,
 input[type="number"]:focus,
 input[type="search"]:focus,
@@ -294,9 +300,9 @@ input[type=range]::-webkit-slider-thumb {
     box-shadow: 0px 0px 0px #000000;
     border: 0px solid #000000;
     height: 10px;
-    width: 10px;
+    width: 20px;
     border-radius: 12px;
-    background: #529DE1;
+    background: #000;
     cursor: pointer;
     -webkit-appearance: none;
     margin-top: -3px;
@@ -315,12 +321,21 @@ input[type=range]::-moz-range-track {
     border: 0px solid #000000;
 }
 input[type=range]::-moz-range-thumb {
-    box-shadow: 0px 0px 0px #000000;
+    box-shadow: 1px 1px 1px #000000;
     border: 0px solid #000000;
     height: 20px;
     width: 20px;
     border-radius: 12px;
-    background: #529DE1;
+    background: linear-gradient(-45deg, #777777, rgba(119, 119, 119, 0) 65%) 100% 0,
+        linear-gradient(45deg, #777777, rgba(119, 119, 119, 0) 65%), linear-gradient(-135deg, #777777,
+        rgba(119, 119, 119, 0) 65%) 100% 100%, linear-gradient(135deg, #777777,
+        rgba(119, 119, 119, 0) 65%) 0 100%, linear-gradient(-45deg, rgba(119, 119, 119, 0) 35%, #777777) 100% 0,
+        linear-gradient(45deg, rgba(119, 119, 119, 0) 35%, #777777), linear-gradient(-135deg,
+        rgba(119, 119, 119, 0) 35%, #777777) 100% 100%, linear-gradient(135deg,
+        rgba(119, 119, 119, 0) 35%, #777777) 0 100% #ddd;
+    background-repeat: no-repeat;
+    background-size: 50% 50%;
+    background-size: 56% 56%;
     cursor: pointer;
 }
 input[type=range]::-ms-track {
